Update pom.xml, README.md, LICENSE, and .gitignore